--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css" media="screen and (min-width:1024px)">
-    <link rel="stylesheet" href="styleMobile.css" media="screen and (max-width:1024px)">
+    <link rel="stylesheet/less" type="text.css" href="style.less" media="screen and (min-width:1024px)">
+    <link rel="stylesheet/less" type="text.css" href="styleMobile.less" media="screen and (max-width:1024px)">
+    <script src="less.min.js" type="text/javascript"></script>
 
     <title>AXIT – Modern AXURE Template for beatiful prototypes</title>
 
